--- a/photo-editor/src/components/BasicTabs.css
+++ b/photo-editor/src/components/BasicTabs.css
@@ -42,3 +42,19 @@ img{
   position:absolute;
   z-index:-2;
 }
+.react-transform-wrapper {
+  width: 100% !important;
+  height: 100% !important;
+  z-index:-2 !important;
+}
+
+.react-transform-component{
+  width:100%!important;
+  height:100%!important;
+}
+.tools{
+  position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 50;
+}
