--- a/photo-editor/src/components/BasicTabs.css
+++ b/photo-editor/src/components/BasicTabs.css
@@ -45,12 +45,14 @@ img{
 .react-transform-wrapper {
   width: 100% !important;
   height: 100% !important;
-  z-index:-2 !important;
+  
 }
 
 .react-transform-component{
+  position:absolute;
   width:100%!important;
   height:100%!important;
+  z-index:-2 !important;
 }
 .tools{
   position: absolute;
