--- a/photo-editor/src/components/BasicTabs.css
+++ b/photo-editor/src/components/BasicTabs.css
@@ -19,6 +19,8 @@
     width:100vw;
     height:100vh;
     display:flex;
+    flex-direction: column;
+    gap:10px;
     justify-content:center;
     align-items:center;
 }
